Ephemeral Storage Strategy for NLTK
I am trying to build a lambda which uses NLTK but only the corpora I
need, which in this case is wordnet.

--- a/template.yaml
+++ b/template.yaml
@@ -13,7 +13,7 @@ Globals:
     Tracing: Active
     Environment:
       Variables:
-        NLTK_DATA: /tmp/nltk_data
+        NLTK_DATA: tmp/nltk_data
 
 
 Resources:
